--- a/.gitignore
+++ b/.gitignore
@@ -174,4 +174,6 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+.idea/
+
 # End of https://www.toptal.com/developers/gitignore/api/webstorm,visualstudiocode,windows
